(refactor) make all sections collapsable, fix issue with education data passed

--- a/src/styles/Sections.css
+++ b/src/styles/Sections.css
@@ -9,7 +9,6 @@
 .section-content {
   width: 100%;
   position: relative;
-
   visibility: hidden;
   opacity: 0;
   transform: translateY(-25px);
@@ -58,4 +57,22 @@
   gap: 16px;
   width: 100%;
   flex-wrap: wrap;
+}
+
+.create-form {
+  background-color: transparent;
+  padding: 8px 18px;
+  border-radius: 69420px;
+  border: 4px solid rgb(238, 240, 244);
+  background-color: rgb(223, 228, 236);
+  font-family: "NotoSans-SemiBold";
+  margin: 18px 0;
+  cursor: pointer;
+  font-weight: 600;
+  display: flex;
+  justify-self: center;
+}
+
+.create-form .fa-plus {
+  margin-right: 8px;
 }
